--- a/Dairy_Farm_Management_System/Dairy_Farm_Management_System.csproj
+++ b/Dairy_Farm_Management_System/Dairy_Farm_Management_System.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.4" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
     <PackageReference Include="SQLitePCLRaw.core" Version="2.1.4" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
